fix testimonial overlap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,12 @@ html, body {
     height: 100%;
 }
 
+
+
+.separation {
+    height: 50px;
+}
+
 .footer {
     height: 50px;
     margin-top: 50px;
@@ -62,7 +68,7 @@ p {
    color: #4D4D4D !important;
 }
 
-.top-buffer-large { margin-top:40px;
+.top-buffer-large { margin-top:40px !important;
  }
 
 .top-buffer-footer {
@@ -163,7 +169,7 @@ max-width: 100%;
     border: 4px solid #3598DB;
     border-radius: 50px;
     opacity: 0.4;
-    overflow: hidden;
+    overflow: auto;
     transition: all 0.4s;
 }
 #quote-carousel .carousel-indicators .active {
@@ -173,7 +179,7 @@ max-width: 100%;
     border-radius: 100px;
     border-color: #3598DB;
     opacity: 1;
-    overflow: hidden;
+    overflow: auto;
 }
 .carousel-inner {
     min-height: 300px;
